# rs2simlib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-package.yml
rs2simlib/: __init__.py
rs2simlib/dataio/: __init__.py  dataio.py
rs2simlib/drag/: __init__.py  drag.py
rs2simlib/fast/: __init__.py
rs2simlib/fast/drag/: __init__.py  fastdrag.py
rs2simlib/fast/sim/: __init__.py  fastsim.py
rs2simlib/models/: __init__.py  models.py
rs2simlib/parsing/grammars/: README.md  UCLexer.g4  UCParser.g4  UCPreprocessorParser.g4
scripts/: draw_plots.py  lint.bat  lint.sh
tests/: __init__.py  test_caching.py  test_dataio.py  test_drag.py  test_pickling.py  test_sim.py  test_trigger_jit.py
tests/data/UnrealScript/: TypeXXBullet.uc  TypeXXBullet_Garbage.uc  TypeXXBullet_Partial.uc  TypeXXBullet_WrongName.uc
