[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rs2simlib"
dynamic = ["version"]
authors = [
    { name = "tuokri", email = "tuokri@tuta.io" },
]
description = "Projectile and weapon physics simulation library for Rising Storm 2: Vietnam."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba>=0.56.0",
    "numpy>=1.22.4",
    "scipy>=1.9.0",
]

[project.urls]
"Homepage" = "https://github.com/tuokri/rs2simlib"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rs2simlib/_version.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest"
]

[tool.hatch.envs.test.scripts]
run = "pytest"
