[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rs2simlib"
dynamic = ["version"]
authors = [
    { name = "tuokri", email = "tuokri@tuta.io" },
]
description = "Projectile and weapon physics simulation library for Rising Storm 2: Vietnam."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba==0.61.0",
    "numpy==2.0.0",
    "scipy==1.15.2",
    "Flake8-pyproject==1.2.3",
    "matplotlib==3.10.1",
]

[project.urls]
"Homepage" = "https://github.com/tuokri/rs2simlib"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rs2simlib/_version.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "mypy",
    "flake8",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
types = "mypy rs2simlib --show-error-codes"
lint = "scripts/lint.sh"

[tool.hatch.envs.test.overrides]
platform.windows.scripts = [
    'lint=.\scripts\lint.bat"',
]

[tool.hatch.envs.plots]
dependencies = [
    "matplotlib",
]

[tool.hatch.envs.plots.scripts]
draw = "python scripts/draw_plots.py"

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin"
]
# TODO: fix models typing.
exclude = [
    "scripts/",
    "rs2simlib/models/",
]

[[tool.mypy.overrides]]
module = "numba"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numba.core.types"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numba.NumbaExperimentalFeatureWarning",
]

[tool.flake8]
per-file-ignores = [
    "rs2simlib/fast/drag/fastdrag.py:C901",
    "rs2simlib/drag/drag.py:C901",
    "rs2simlib/dataio/dataio.py:C901",
]
