[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rs2simlib"
dynamic = ["version"]
authors = [
    { name = "Tuomo Kriikkula", email = "tuokri@tuta.io" },
]
description = "Projectile and weapon physics simulation library for Rising Storm 2: Vietnam."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "antlr4-tools>=0.2.2",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]

[project.urls]
"Homepage" = "https://github.com/tuokri/rs2simlib"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rs2simlib/_version.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
types = "mypy rs2simlib --show-error-codes"
lint = "ruff check ."

[tool.hatch.envs.plots]
dependencies = [
    "matplotlib",
]

[tool.hatch.envs.plots.scripts]
draw = "python scripts/draw_plots.py"

[tool.mypy]
# TODO: fix models typing.
exclude = [
    "rs2simlib/models/",
]

[[tool.mypy.overrides]]
module = "numba"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numba.core.types"
ignore_missing_imports = true
